<resources>
    <string name="app_name">BookShare</string>
    <string name="facebook_app_id">"1716685071920315"</string>

    <string name="notification_name">Bookshare</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Don\'t you have an account? Register</string>


    <!-- Buttons -->
    <string name="yes">Yes</string>
    <string name="scan">Scan a Book</string>
    <string name="login">Login</string>
    <string name="loginfb">Login with Facebook</string>
    <string name="add_book">Add Book</string>
    <string name="del_book">Delete Book</string>
    <string name="lend_book">Ask Book</string>
    <string name="return_book">Return Book</string>
    <string name="delete_confirm">Are you sure ?</string>
    <string name="return_sent">Return request sent</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search a book</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_book_detail">BookDetail</string>
    <string name="title_activity_maps">Location</string>

    <!-- SEARCH RESULT -->
    <string name="card_image_contdesc">book image</string>
    <string name="loading_search_results">Searching book...</string>
    <string name="nobooks_for_that_title">We\'re sorry, book not found!</string>

    <!-- SETTINGS FRAGMENT -->
    <string name="settings_title">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_location">Location</string>

    <string name="displayinfo_title">Displayed information</string>
    <string name="contactinfo_title">Contact information</string>

    <string name="username_title">Name</string>
    <string name="usersurname_title">Surname</string>
    <string name="email_title">Email</string>
    <string name="phone_title">Phone Number</string>

    <string name="general_sett_title">General Settings</string>

    <string name="change_username">Change Name</string>
    <string name="change_usersurname">Change Surname</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="change_distance">Change Max Distance</string>


    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>

    <string name="book_distance_title">Search distance</string>
    <string name="distance_title">Distance</string>

    <string name="invalid_email">Error, provide a valid email </string>
    <string name="invalid_phone">Error, provide a valid phone number</string>
    <string name="invalid_name">Error, name must contain only letters</string>
    <string name="invalid_surname">Error, surname must contain only letters</string>
    <string name="invalid_distance">Error, invalid distance</string>
    <string name="invalid_distance_number">Error, distance has to be between 10 and 10.000 Km</string>
    <!-- LIBRARY ACTIVITY -->
    <string name="error_loading_library">Error while loading library, try again</string>
    <string name="scan_isbn">Scan a ISBN</string>
    <string name="no_scandata">No book scan data received!</string>
    <string name="found">found</string>
    <string name="search_for_books">Searching for books...</string>
    <string name="book_alr_added">You have already added this book</string>

    <string name="booksfinder_error">Sorry, no book found</string>
    <string name="library_title">Library</string>
    <string name="firsttab_name">My Books</string>
    <string name="secondtab_name">Borrowed</string>
    <string name="book_pages">pages</string>

    <string name="error_add">Error on adding the book, try again</string>
    <string name="error_ask">Error on asking the book, try again</string>
    <string name="error_delete">Error on deleting the book, try again</string>

    <string name="success_add">Book succesfully added!</string>
    <string name="success_delete">Book succesfully deleted!</string>


    <string name="nobooks_inserted">No books yet</string>
    <string name="nobooks_received">No books yet</string>

    <string name="wait">Wait</string>
    <string name="loading_library">loading library..</string>

    <!-- REQUEST ACTIVITY -->
    <string name="write_review">Write a review</string>
    <string name="tab_sent">Sent</string>
    <string name="tab_received">Received</string>
    <string name="refuse_button">Refuse</string>
    <string name="accept_button">Accept</string>
    <string name="info_pending">Pending</string>
    <string name="info_accepted">Accepted</string>
    <string name="info_refused">Refused</string>
    <string name="info_confirmed">Confirmed</string>
    <string name="contact_user">Contact</string>
    <string name="confirm_isbn">Confirm with scan</string>
    <string name="send_fb_message">Send a FB message</string>
    <string name="exchange_confirmed">Exchange confirmed!</string>
    <string name="return_confirmed">Book returned</string>
    <string name="title_activity_requests">Your Requests</string>
    <string name="loading_requests">Loading your requests</string>
    <string name="nobook_requests">No book requests yet</string>
    <string name="delete_request">Delete Request?</string>
    <string name="cant_delete">Can\'t delete confirmed request!</string>
    <string name="not_enough_credits">You don\'t have enough credits!</string>
    <string name="request_existing">You already have a request on this book!</string>

    <!-- MAP ACTIVITY -->
    <string name="toolbar_verify">Verify location</string>
    <string name="toolbar_provide">Provide location</string>
    <string name="toolbar_change">Change location</string>

    <string name="ask_loc_verify">Is this your current location?</string>
    <string name="ask_loc_provide">Search your location</string>
    <string name="ask_loc_change">Your current Location</string>

    <string name="confirm_loc_verify">Yes</string>
    <string name="confirm_loc_change">Use This</string>

    <string name="change_loc_verify">Change</string>
    <string name="change_loc_change">Change</string>
    <string name="change_loc_provide">Search</string>

    <string name="remember_text">You can also change it later</string>

    <!-- FRAGMENT HOME -->
    <string name="books_nearby_title">Books nearby</string>
    <string name="nobooks_nearby">It appears that there are no books near you</string>

    <!-- FRAGMENT REVIEWS -->

    <string name="avg_rating">Avg rating: </string>
    <string name="lastinsert_title">Last inserted:</string>
    <string name="loading_reviews">Loading reviews..</string>
    <string name="loading_reviewers">Loading reviewers..</string>

    <string name="reviews_string">reviews</string>
    <string name="reviews_title">Reviews</string>
    <string name="title_revofme">Reviews About Me</string>
    <string name="title_myrev">My Reviews</string>


    <!-- ACTIVITY WRITE REVIEW -->

    <string name="review_activity_title">Write a Review</string>

    <string name="rating_title">Rating:</string>
    <string name="review_title_text">Title</string>
    <string name="review_description_text">Description:</string>
    <string name="add_review_text">add review</string>
    <string name="skip_review_text">skip</string>

    <string name="maxchar_incomplete">/200</string>
    <string name="maxchar_default">0/200</string>

    <string name="rev_notitle_err">Error, insert a title</string>
    <string name="rev_norating_err">Error, insert a rating</string>
    <string name="rev_nodesc_err">Error, insert a description</string>
    <string name="rev_incomplete_err">Error, complete all the fields</string>

    <!-- ACTIVITY USER PROFILE -->
    <string name="far_from_you">Km far from you</string>
    <string name="no_owner_reviews">no reviews yet</string>
    <string name="owner_review_count">review, click to view</string>
    <string name="owner_reviews_count">reviews, click to view</string>
    <string name="zero">0</string>
</resources>
