<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.polimi.dima.bookshare.activities.WriteReviewActivity">

    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/rating_bar_margintop"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:stepSize="1" />

    <View
        android:id="@id/ruler"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/review_rating"
        android:layout_marginTop="@dimen/rev_ruler_margintop"
        android:background="@color/lightgrey_star" />

    <EditText
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ruler"
        android:layout_marginLeft="@dimen/titles_marginleft"
        android:layout_marginStart="@dimen/titles_marginleft"
        android:layout_marginRight="@dimen/titles_marginleft"
        android:layout_marginEnd="@dimen/titles_marginleft"
        android:layout_marginTop="@dimen/rev_title_margintop"
        android:hint="@string/review_title_text"
        android:textColorHint="@color/textSecondary"
        android:maxLength="30"
        android:paddingLeft="@dimen/rev_title_paddingleft"
        android:paddingStart="@dimen/rev_title_paddingleft"
        android:textColor="@color/textPrimaryLight"
        android:textSize="@dimen/titles_txtsize" />

    <TextView
        android:id="@+id/review_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:layout_marginLeft="@dimen/titles_marginleft"
        android:layout_marginStart="@dimen/titles_marginleft"
        android:layout_marginTop="@dimen/rev_description_margintop"
        android:text="@string/review_description_text"
        android:textColor="@color/textPrimaryLight"
        android:textSize="@dimen/titles_txtsize" />

    <EditText
        android:id="@+id/review_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rev_description_height"
        android:layout_below="@id/review_description_text"
        android:layout_marginEnd="@dimen/titles_marginleft"
        android:layout_marginLeft="@dimen/titles_marginleft"
        android:layout_marginRight="@dimen/titles_marginleft"
        android:layout_marginStart="@dimen/titles_marginleft"
        android:layout_marginTop="@dimen/rev_descr_text_margintop"
        android:background="@drawable/edit_text_borders"
        android:gravity="top|start"
        android:maxLength="200"
        android:padding="@dimen/rev_description_padding"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/rev_description_txtsize" />

    <TextView
        android:id="@+id/max_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/review_description"
        android:layout_marginEnd="@dimen/char_count_marginright"
        android:layout_marginRight="@dimen/char_count_marginright"
        android:layout_marginTop="@dimen/char_count_margintop"
        android:text="@string/maxchar_default"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/char_count_txtsize" />

    <Button
        android:id="@+id/add_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_characters"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_add_rev_margintop"
        android:background="@drawable/button_border"
        android:paddingTop="@dimen/button_add_rev_padding"
        android:paddingBottom="@dimen/button_add_rev_padding"
        android:paddingLeft="@dimen/button_add_rev_paddinglr"
        android:paddingRight="@dimen/button_add_rev_paddinglr"
        android:text="@string/add_review_text"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/skip_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/button_skip_margin_bottom"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/skip_review_text"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
